Reveal ships when applicable (#50)
* sunken ships get revealed and all ships at the end of the game are revealed

* quick GameDTO fix