@@ -3,9 +3,7 @@ package com.frankint.battleship.api.mapper;
 import com.frankint.battleship.api.dto.GameDTO;
 import com.frankint.battleship.api.dto.PlayerDTO;
 import com.frankint.battleship.api.dto.ShipDTO;
-import com.frankint.battleship.domain.model.Board;
-import com.frankint.battleship.domain.model.Game;
-import com.frankint.battleship.domain.model.Player;
+import com.frankint.battleship.domain.model.*;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
@@ -15,22 +13,22 @@ import java.util.stream.Collectors;
 @Component
 public class GameMapper {
 
-    public GameDTO toDTO(Game game, String viewerId) {
-        // Identify who is who
-        Player player1 = game.getPlayer1();
-        Player player2 = game.getPlayer2();
-
-        Player viewer;
+    public GameDTO toDTO(Game game, String requestingPlayerId) {
+        Player self;
         Player opponent;
 
-        if (player1.getId().equals(viewerId)) {
-            viewer = player1;
-            opponent = player2;
-        } else if (player2 != null && player2.getId().equals(viewerId)) {
-            viewer = player2;
-            opponent = player1;
+        String p1Id = game.getPlayer1().getId();
+        // Handle potential null P2 (if game is waiting)
+        String p2Id = game.getPlayer2() != null ? game.getPlayer2().getId() : null;
+
+        if (p1Id.equals(requestingPlayerId)) {
+            self = game.getPlayer1();
+            opponent = game.getPlayer2();
+        } else if (p2Id != null && p2Id.equals(requestingPlayerId)) {
+            self = game.getPlayer2();
+            opponent = game.getPlayer1();
         } else {
-            throw new IllegalArgumentException("Viewer is not a player in this game");
+            throw new IllegalArgumentException("User " + requestingPlayerId + " is not part of this game");
         }
 
         return new GameDTO(
@@ -38,29 +36,53 @@ public class GameMapper {
                 game.getState(),
                 game.getCurrentTurnPlayerId(),
                 game.getWinnerId(),
-                toPlayerDTO(viewer, true),   // Show everything for self
-                opponent != null ? toPlayerDTO(opponent, false) : null // Hide ships for opponent
+                toPlayerDTO(self, true, game.getState()),     // Self: Always show everything
+                toPlayerDTO(opponent, false, game.getState()) // Opponent: Show based on rules
         );
     }
 
-    private PlayerDTO toPlayerDTO(Player player, boolean isSelf) {
+    private PlayerDTO toPlayerDTO(Player player, boolean isSelf, GameState state) {
+        if (player == null) return null;
+
+        List<ShipDTO> visibleShips;
+        List<ShipDTO> sunkShips;
+
+        if (isSelf) {
+            // I can always see my own ships
+            visibleShips = mapShips(player.getBoard().getShips());
+            sunkShips = Collections.emptyList(); // Redundant for self
+        } else {
+            // LOGIC FOR OPPONENT VIEW
+            if (state == GameState.FINISHED) {
+                // Issue 22: Game Over -> Show Everything
+                visibleShips = mapShips(player.getBoard().getShips());
+                sunkShips = Collections.emptyList();
+            } else {
+                // Active Game -> Hide healthy ships
+                visibleShips = Collections.emptyList();
+
+                // Issue 21: Reveal Sunk Ships
+                sunkShips = player.getBoard().getShips().stream()
+                        .filter(Ship::isSunk)
+                        .map(this::toShipDTO)
+                        .toList();
+            }
+        }
+
         return new PlayerDTO(
                 player.getId(),
-                isSelf ? toShipDTOs(player.getBoard()) : Collections.emptyList(), // HIDE SHIPS IF NOT SELF
+                visibleShips,
+                sunkShips,
                 player.getBoard().getHitShots(),
                 player.getBoard().getMissedShots()
         );
     }
 
-    private List<ShipDTO> toShipDTOs(Board board) {
-        // We need to add getShips() to Board
-        return board.getShips().stream()
-                .map(ship -> new ShipDTO(
-                        ship.getId(),
-                        ship.getSize(),
-                        ship.isSunk(),
-                        ship.getCoordinates()
-                ))
-                .collect(Collectors.toList());
+    private List<ShipDTO> mapShips(List<Ship> ships) {
+        return ships.stream().map(this::toShipDTO).toList();
+    }
+
+    private ShipDTO toShipDTO(Ship ship) {
+        return new ShipDTO(ship.getId(), ship.getSize(), ship.isSunk(), ship.getCoordinates());
     }
 }
